--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -12,7 +12,7 @@ copyright: Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.c
 
 menu:
 - {name: About, link: '/about'}
-- {name: CV, link: '/cv'}
+- {name: CV, url: '/cv'}
 - {name: Portfolio, link: '/portfolio'}
 - {name: Random Stuff, link: '/contact'}
 
