--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -292,4 +292,4 @@ portfolio-items:
 # Contact Section
 
 contact-title: Contact Info
-contact-email: steve.fruits@email.com
+contact-email: ngbrianyc@gmail.com
